5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1575_1332.log
== TEST (2019-03-12 17:52:51) 
-- CODE:
aresta =5
area = 
 
print(round(3/2*35**0.5, 4))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:54:03) 
-- CODE:
aresta =5
area = 7,5**0.2
 
print(round(3/2*35**0.5, 4))
-- OUTPUT:
8.8741
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:54:48) 
-- CODE:
aresta =5
area = 7,5**0.2
 
print(round(3/2*35**0.5, 4))
-- EXECUTION TIME:
0.151708
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
8.8741
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:56:00) 
-- CODE:
aresta =
area =
 
print(round(3/2*35**0.5, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:56:31) 
-- CODE:
 print(round(3/2*35**0.5, 4))
-- ERROR:
File "XXXX", line 1
    print(round(3/2*35**0.5, 4))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:57:09) 
-- CODE:
 print(3/2*35**0.5, 4)
-- ERROR:
File "XXXX", line 1
    print(3/2*35**0.5, 4)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:07:45) 
-- CODE:
area=3
aresta=2

print(aresta+area)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:08:13) 
-- CODE:
area=5**0.5
aresta=2

print(aresta+area)
-- OUTPUT:
4.23606797749979
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:08:41) 
-- CODE:
area=5**2
aresta=2

print(aresta+area)
-- OUTPUT:
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:11:51) 
-- CODE:
area=3/2((aresta**2)*3)
aresta=5

print(aresta+area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    area=3/2((aresta**2)*3)
NameError: name 'aresta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:12:33) 
-- CODE:
aresta=5
area=3/2((aresta**2)*3)

print(aresta+area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=3/2((aresta**2)*3)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:13:00) 
-- CODE:
aresta=5
area=3/2((5**2)*3)

print(aresta+area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=3/2((5**2)*3)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:13:24) 
-- CODE:
aresta=5
area=3/2*((5**2)*3)

print(aresta+area)
-- OUTPUT:
117.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:15:26) 
-- CODE:
aresta=5
area=3/2*(3*aresta**2)

print(area)
-- OUTPUT:
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:15:34) 
-- CODE:
aresta=5
area=3/2*(3*aresta**2)

print(area)
-- EXECUTION TIME:
0.132456
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
112.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:27:14) 
-- CODE:
aresta=5
area=3/2*(3*aresta**2)

print(round(area,4))
-- OUTPUT:
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:27:23) 
-- CODE:
aresta=5
area=3/2*(3*aresta**2)

print(round(area,4))
-- EXECUTION TIME:
0.173404
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
112.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:38:25) 
-- CODE:
aresta=5
area=3/2*(3*aresta**2)

print(round(area.4))
-- ERROR:
File "XXXX", line 4
    print(round(area.4))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:38:46) 
-- CODE:
aresta=5
area=3/2*(3*aresta**2)

print(round(area,4))
-- OUTPUT:
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:47:38) 
-- CODE:
aresta=5
area=3/2*(3*(aresta**2))

print(round(area,4))
-- OUTPUT:
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:48:50) 
-- CODE:
aresta=5
area=3/2*(3*(aresta**0.5))

print(round(area,4))
-- OUTPUT:
10.0623
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:48:55) 
-- CODE:
aresta=5
area=3/2*(3*(aresta**0.5))

print(round(area,4))
-- EXECUTION TIME:
0.195504
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
10.0623
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:49:08) 
-- CODE:
aresta=5
area=3/2*(3*(aresta**0.5))

print(round(area,4))
-- OUTPUT:
10.0623
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:51:42) 
-- CODE:
aresta=5
area=3/2*(3*((aresta)**0.5))

print(round(area,4))
-- OUTPUT:
10.0623
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:51:49) 
-- CODE:
aresta=5
area=3/2*(3*((aresta)**0.5))

print(round(area,4))
-- EXECUTION TIME:
0.172064
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
10.0623
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:51:57) 
-- CODE:
aresta=5
area=3/2*(3*((aresta)**0.5))

print(round(area,4))
-- OUTPUT:
10.0623
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:55:11) 
-- CODE:
aresta=5
area=3/2*(3**1/2*aresta**0.5)

print(round(area,4))
-- OUTPUT:
5.0312
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:55:18) 
-- CODE:
aresta=5
area=3/2*(3**1/2*aresta**0.5)

print(round(area,4))
-- EXECUTION TIME:
0.161185
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5.0312
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:55:25) 
-- CODE:
aresta=5
area=3/2*(3**1/2*aresta**0.5)

print(round(area,4))
-- EXECUTION TIME:
0.188871
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5.0312
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:55:30) 
-- CODE:
aresta=5
area=3/2*(3**1/2*aresta**0.5)

print(round(area,4))
-- OUTPUT:
5.0312
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:58:02) 
-- CODE:
aresta=5
area=(3/2*((3)**2)*aresta**2)

print(round(area,4))
-- OUTPUT:
337.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:59:32) 
-- CODE:
aresta=5
area=(3/2*((3*aresta)**0.5))

print(round(area,4))
-- OUTPUT:
5.8095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:59:38) 
-- CODE:
aresta=5
area=(3/2*((3*aresta)**0.5))

print(round(area,4))
-- EXECUTION TIME:
0.136277
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5.8095
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:00:10) 
-- CODE:
aresta=5
area=(3/2*((3*aresta)**0.5))

print(round(area,4))
-- OUTPUT:
5.8095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:06:33) 
-- CODE:
aresta=5
area=(3/2*((3)**0.5*aresta**2)

print(round(area,4))
-- ERROR:
File "XXXX", line 4
    print(round(area,4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:07:15) 
-- CODE:
aresta=5
area=(3/2*((3)**0.5*aresta**2)

print(round(area,4))
-- ERROR:
File "XXXX", line 4
    print(round(area,4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:07:49) 
-- CODE:
aresta =5
area =(3/2*((3)**0.5*aresta**2)

print(round(area,4))
-- ERROR:
File "XXXX", line 4
    print(round(area,4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 23:09:32) 
-- CODE:
aresta =5
area =3/2*((3)**0.5)*(aresta**2)
print(round(area,4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:09:44) 
-- CODE:
aresta =5
area =3/2*((3)**0.5)*(aresta**2)
print(round(area,4))
-- EXECUTION TIME:
0.139544
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
